Add initial SPIs and providers
This forms a stable starting point for #1, #2, and #3 SPIs along with providers for #8, #9, and #10. These consist of an AEAD cipher SPI, a key exchange SPI, and a signature SPI, along with providers based on BouncyCastle, Java 11, and Java 15 respectively. A small number of smoke tests are included from the relevant RFCs.

--- a/all/pom.xml
+++ b/all/pom.xml
@@ -26,6 +26,12 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>o1crypto</artifactId>
+    <name>O(1) Cryptography Distribution</name>
+    <description>
+        O(1) Cryptography is an easy to use, hard to misuse Java cryptographic library based on O(1) cryptographic algorithms.
+        This module assembles together version-specific Java code into a multi-release jar which allows for automatic support of
+        JDK cryptography library improvements.
+    </description>
     <build>
         <plugins>
             <plugin>
