--- a/java15/pom.xml
+++ b/java15/pom.xml
@@ -26,6 +26,7 @@
     <version>1.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>o1crypto-java15</artifactId>
+  <name>O(1) Cryptography Extensions for Java 15+</name>
   <properties>
     <maven.install.skip>true</maven.install.skip>
     <maven.compiler.release>15</maven.compiler.release>
@@ -37,8 +38,18 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>dev.o1c</groupId>
+      <artifactId>o1crypto-java11</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcprov-jdk15on</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
