--- a/java8/pom.xml
+++ b/java8/pom.xml
@@ -26,6 +26,7 @@
     <version>1.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>o1crypto-java8</artifactId>
+  <name>O(1) Cryptography Extensions for Java 8+</name>
   <properties>
     <maven.install.skip>true</maven.install.skip>
     <maven.compiler.release>8</maven.compiler.release>
@@ -34,13 +35,7 @@
     <dependency>
       <groupId>org.bouncycastle</groupId>
       <artifactId>bcprov-jdk15on</artifactId>
-      <version>1.67</version>
       <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
