--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,8 @@
   </organization>
   <licenses>
     <license>
-      <!-- TODO: Apache License metadata -->
+      <name>Apache License, Version 2.0</name>
+      <url>https://www.apache.org/licenses/LICENSE-2.0</url>
     </license>
   </licenses>
 
