--- a/all/pom.xml
+++ b/all/pom.xml
@@ -32,6 +32,10 @@
         This module assembles together version-specific Java code into a multi-release jar which allows for automatic support of
         JDK cryptography library improvements.
     </description>
+    <properties>
+        <maven.install.skip>false</maven.install.skip>
+        <maven.deploy.skip>false</maven.deploy.skip>
+    </properties>
     <build>
         <plugins>
             <plugin>
@@ -60,4 +64,26 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>net.i2p.crypto</groupId>
+            <artifactId>eddsa</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>de.mkammerer</groupId>
+            <artifactId>argon2-jvm</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.kosprov.jargon2</groupId>
+            <artifactId>jargon2-api</artifactId>
+            <optional>true</optional>
+        </dependency>
+    </dependencies>
 </project>
