--- a/java11/pom.xml
+++ b/java11/pom.xml
@@ -29,6 +29,7 @@
   <name>O(1) Cryptography Extensions for Java 11+</name>
   <properties>
     <maven.install.skip>true</maven.install.skip>
+    <maven.deploy.skip>true</maven.deploy.skip>
     <maven.compiler.release>11</maven.compiler.release>
   </properties>
   <dependencies>
