--- a/java15/pom.xml
+++ b/java15/pom.xml
@@ -29,6 +29,7 @@
   <name>O(1) Cryptography Extensions for Java 15+</name>
   <properties>
     <maven.install.skip>true</maven.install.skip>
+    <maven.deploy.skip>true</maven.deploy.skip>
     <maven.compiler.release>15</maven.compiler.release>
   </properties>
   <dependencies>
@@ -45,16 +46,6 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.bouncycastle</groupId>
-      <artifactId>bcprov-jdk15on</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>net.i2p.crypto</groupId>
-      <artifactId>eddsa</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
