--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
         <version>1.67</version>
       </dependency>
       <dependency>
+        <groupId>cafe.cryptography</groupId>
+        <artifactId>curve25519-elisabeth</artifactId>
+        <version>0.1.0</version>
+      </dependency>
+      <dependency>
         <groupId>net.i2p.crypto</groupId>
         <artifactId>eddsa</artifactId>
         <version>0.3.0</version>
