--- a/java15/pom.xml
+++ b/java15/pom.xml
@@ -2,7 +2,7 @@
 <!--
   ~ ISC License
   ~
-  ~ Copyright (c) 2020, Matt Sicker
+  ~ Copyright (c) 2021, Matt Sicker
   ~
   ~ Permission to use, copy, modify, and/or distribute this software for any
   ~ purpose with or without fee is hereby granted, provided that the above
@@ -15,6 +15,8 @@
   ~ WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
   ~ ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
   ~ OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
+  ~
+  ~ SPDX-License-Identifier: ISC
   -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0"
@@ -48,6 +50,11 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.jr</groupId>
+      <artifactId>jackson-jr-objects</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
