--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <!--
   ~ ISC License
   ~
-  ~ Copyright (c) 2020, Matt Sicker
+  ~ Copyright (c) 2021, Matt Sicker
   ~
   ~ Permission to use, copy, modify, and/or distribute this software for any
   ~ purpose with or without fee is hereby granted, provided that the above
@@ -15,6 +15,8 @@
   ~ WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
   ~ ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
   ~ OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
+  ~
+  ~ SPDX-License-Identifier: ISC
   -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0"
@@ -132,6 +134,11 @@
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-engine</artifactId>
         <version>5.7.0</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.jr</groupId>
+        <artifactId>jackson-jr-objects</artifactId>
+        <version>2.12.0</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
