Add C port of Blake3 hashing
This imports version 0.3.7 of the reference public domain BLAKE3 code with some platform-specific assembly optimizations included.

This also removes the o1c_static target to simplify the build as it gets more complex.

--- a/c/src/CMakeLists.txt
+++ b/c/src/CMakeLists.txt
@@ -2,16 +2,33 @@ include(TestBigEndian)
 include(CheckSymbolExists)
 include(GenerateExportHeader)
 
-set(O1C_SOURCE_FILES crypto.c auth.c aead.c sha512.c drbg.c util.c curve25519/curve25519.c)
-add_library(o1c SHARED ${O1C_SOURCE_FILES})
+set(O1C_SOURCE_FILES crypto.c auth.c aead.c sha512.c drbg.c util.c curve25519.c hash.c)
+set(BLAKE3_SOURCE_FILES blake3/blake3.c blake3/blake3_dispatch.c blake3/blake3_portable.c)
+set(BLAKE3_ASM_UNIX_FILES blake3/blake3_avx2_x86-64_unix.S blake3/blake3_avx512_x86-64_unix.S
+        blake3/blake3_sse41_x86-64_unix.S blake3/blake3_sse2_x86-64_unix.S)
+# TODO: mscv and mingw asm options
+
+add_library(blake3_sse2 OBJECT blake3/blake3_sse2.c)
+target_compile_options(blake3_sse2 PUBLIC -msse2)
+target_include_directories(blake3_sse2 PRIVATE include)
+add_library(blake3_sse41 OBJECT blake3/blake3_sse41.c)
+target_compile_options(blake3_sse41 PUBLIC -msse4.1)
+target_include_directories(blake3_sse41 PRIVATE include)
+add_library(blake3_avx2 OBJECT blake3/blake3_avx2.c)
+target_compile_options(blake3_avx2 PUBLIC -mavx2)
+target_include_directories(blake3_avx2 PRIVATE include)
+add_library(blake3_avx512 OBJECT blake3/blake3_avx512.c)
+target_compile_options(blake3_avx512 PUBLIC -mavx512f -mavx512vl)
+target_include_directories(blake3_avx512 PRIVATE include)
+add_library(o1c SHARED ${O1C_SOURCE_FILES}
+        ${BLAKE3_SOURCE_FILES} ${BLAKE3_ASM_UNIX_FILES}
+        $<TARGET_OBJECTS:blake3_sse2> $<TARGET_OBJECTS:blake3_sse41>
+        $<TARGET_OBJECTS:blake3_avx2> $<TARGET_OBJECTS:blake3_avx512>)
+generate_export_header(o1c)
+include_directories(../include)
 target_include_directories(o1c PUBLIC ../include)
 target_include_directories(o1c PRIVATE include)
-generate_export_header(o1c)
 target_include_directories(o1c PUBLIC ${PROJECT_BINARY_DIR}/src)
-add_library(o1c_static STATIC ${O1C_SOURCE_FILES})
-target_include_directories(o1c_static PUBLIC ../include)
-target_include_directories(o1c_static PRIVATE include)
-target_include_directories(o1c_static PUBLIC ${PROJECT_BINARY_DIR}/src)
 
 #find_package(JNI REQUIRED)
 # TODO: https://cmake.org/cmake/help/latest/module/UseJava.html
@@ -22,22 +39,17 @@ target_include_directories(o1c_static PUBLIC ${PROJECT_BINARY_DIR}/src)
 test_big_endian(NATIVE_BIG_ENDIAN)
 if (${NATIVE_BIG_ENDIAN})
     add_compile_definitions(o1c PUBLIC NATIVE_BIG_ENDIAN)
-    add_compile_definitions(o1c_static PUBLIC NATIVE_BIG_ENDIAN)
 else ()
     add_compile_definitions(o1c PUBLIC NATIVE_LITTLE_ENDIAN)
-    add_compile_definitions(o1c_static PUBLIC NATIVE_LITTLE_ENDIAN)
 endif ()
 
 if (${CMAKE_SYSTEM_PROCESSOR} MATCHES "64")
     add_compile_definitions(o1c PUBLIC ARCH_WORD_BITS=64)
-    add_compile_definitions(o1c_static PUBLIC ARCH_WORD_BITS=64)
 else ()
     add_compile_definitions(o1c PUBLIC ARCH_WORD_BITS=32)
-    add_compile_definitions(o1c_static PUBLIC ARCH_WORD_BITS=32)
 endif ()
 
 check_symbol_exists(memset_s string.h HAVE_MEMSET_S)
 if (${HAVE_MEMSET_S})
     add_compile_definitions(o1c PUBLIC HAVE_MEMSET_S)
-    add_compile_definitions(o1c_static PUBLIC HAVE_MEMSET_S)
 endif ()
