--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -6,8 +6,7 @@ project(O1C
 include(FetchContent)
 
 set(CMAKE_C_STANDARD 11)
-# todo: more warnings enabled
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -Wall -Wextra -Wstrict-prototypes -Wno-error=strict-prototypes -fvisibility=hidden")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -Wall -Wextra -pedantic -fstack-protector-strong -D_FORTIFY_SOURCE=2 -Wstrict-prototypes -Wno-error=strict-prototypes -fvisibility=hidden")
 
 add_subdirectory(src)
 enable_testing()
