--- a/c/src/CMakeLists.txt
+++ b/c/src/CMakeLists.txt
@@ -1,34 +1,42 @@
 include(TestBigEndian)
 include(CheckSymbolExists)
 include(GenerateExportHeader)
+include(FetchContent)
 
 set(O1C_SOURCE_FILES crypto.c auth.c aead.c sha512.c drbg.c util.c curve25519.c hash.c)
-set(BLAKE3_SOURCE_FILES blake3/blake3.c blake3/blake3_dispatch.c blake3/blake3_portable.c)
-set(BLAKE3_ASM_UNIX_FILES blake3/blake3_avx2_x86-64_unix.S blake3/blake3_avx512_x86-64_unix.S
-        blake3/blake3_sse41_x86-64_unix.S blake3/blake3_sse2_x86-64_unix.S)
-# TODO: mscv and mingw asm options
 
-add_library(blake3_sse2 OBJECT blake3/blake3_sse2.c)
+FetchContent_Declare(blake3
+        GIT_REPOSITORY https://github.com/BLAKE3-team/BLAKE3.git
+        GIT_TAG 35aa4259bd37457f15d5070957da4825bf64c838 # tag 0.3.7
+        )
+FetchContent_MakeAvailable(blake3)
+
+set(BLAKE3_SOURCE_FILES
+        ${blake3_SOURCE_DIR}/c/blake3.c
+        ${blake3_SOURCE_DIR}/c/blake3_dispatch.c
+        ${blake3_SOURCE_DIR}/c/blake3_portable.c)
+set(BLAKE3_ASM_UNIX_FILES
+        ${blake3_SOURCE_DIR}/c/blake3_avx2_x86-64_unix.S
+        ${blake3_SOURCE_DIR}/c/blake3_avx512_x86-64_unix.S
+        ${blake3_SOURCE_DIR}/c/blake3_sse41_x86-64_unix.S
+        ${blake3_SOURCE_DIR}/c/blake3_sse2_x86-64_unix.S)
+# TODO: mscv and mingw asm options
+add_library(blake3_sse2 OBJECT ${blake3_SOURCE_DIR}/c/blake3_sse2.c)
 target_compile_options(blake3_sse2 PUBLIC -msse2)
-target_include_directories(blake3_sse2 PRIVATE include)
-add_library(blake3_sse41 OBJECT blake3/blake3_sse41.c)
+add_library(blake3_sse41 OBJECT ${blake3_SOURCE_DIR}/c/blake3_sse41.c)
 target_compile_options(blake3_sse41 PUBLIC -msse4.1)
-target_include_directories(blake3_sse41 PRIVATE include)
-add_library(blake3_avx2 OBJECT blake3/blake3_avx2.c)
+add_library(blake3_avx2 OBJECT ${blake3_SOURCE_DIR}/c/blake3_avx2.c)
 target_compile_options(blake3_avx2 PUBLIC -mavx2)
-target_include_directories(blake3_avx2 PRIVATE include)
-add_library(blake3_avx512 OBJECT blake3/blake3_avx512.c)
+add_library(blake3_avx512 OBJECT ${blake3_SOURCE_DIR}/c/blake3_avx512.c)
 target_compile_options(blake3_avx512 PUBLIC -mavx512f -mavx512vl)
-target_include_directories(blake3_avx512 PRIVATE include)
+
 add_library(o1c SHARED ${O1C_SOURCE_FILES}
         ${BLAKE3_SOURCE_FILES} ${BLAKE3_ASM_UNIX_FILES}
         $<TARGET_OBJECTS:blake3_sse2> $<TARGET_OBJECTS:blake3_sse41>
         $<TARGET_OBJECTS:blake3_avx2> $<TARGET_OBJECTS:blake3_avx512>)
 generate_export_header(o1c)
-include_directories(../include)
-target_include_directories(o1c PUBLIC ../include)
+target_include_directories(o1c PUBLIC ../include ${blake3_SOURCE_DIR}/c ${PROJECT_BINARY_DIR}/src)
 target_include_directories(o1c PRIVATE include)
-target_include_directories(o1c PUBLIC ${PROJECT_BINARY_DIR}/src)
 
 #find_package(JNI REQUIRED)
 # TODO: https://cmake.org/cmake/help/latest/module/UseJava.html
