Try to get dependency download to work

--- a/c/test/CMakeLists.txt
+++ b/c/test/CMakeLists.txt
@@ -13,10 +13,15 @@ else()
     ExternalProject_Add(sodium
             URL https://github.com/jedisct1/libsodium/releases/download/1.0.18-RELEASE/libsodium-1.0.18.tar.gz
             URL_HASH SHA256=6f504490b342a4f8a4c4a02fc9b866cbef8622d5df4e5452b46be121e46636c1
-            CONFIGURE_COMMAND ./configure
+            UPDATE_COMMAND ""
+            BUILD_IN_SOURCE 1
+            CONFIGURE_COMMAND ./configure --disable-shared --prefix=/tmp --disable-dependency-tracking
             BUILD_COMMAND ${MAKE_EXE}
             INSTALL_COMMAND ${MAKE_EXE} install)
-    add_dependencies(sodium)
+    include_directories(/tmp/include)
+    link_directories(/tmp/lib)
+    add_library(libsodium STATIC IMPORTED GLOBAL)
+    link_libraries(libsodium)
 endif ()
 
 
