--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -6,7 +6,7 @@ project(O1C
 include(FetchContent)
 
 set(CMAKE_C_STANDARD 11)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -Wall -Wextra -pedantic -fstack-protector-strong -D_FORTIFY_SOURCE=2 -Wstrict-prototypes -Wno-error=strict-prototypes -fvisibility=hidden")
+add_compile_options(-O3 -Wall -Wextra)
 
 add_subdirectory(src)
 enable_testing()
