Support getentropy in libc where available

--- a/c/src/CMakeLists.txt
+++ b/c/src/CMakeLists.txt
@@ -41,7 +41,8 @@ generate_export_header(o1c)
 target_include_directories(o1c PUBLIC ../include ${blake3_SOURCE_DIR}/c ${PROJECT_BINARY_DIR}/src)
 target_include_directories(o1c PRIVATE include)
 target_compile_options(o1c PRIVATE
-        -pedantic -fstack-protector-strong -D_FORTIFY_SOURCE=2 -Wstrict-prototypes -Wno-error=strict-prototypes -fvisibility=hidden)
+        -pedantic -fstack-protector-strong -Wstrict-prototypes -Wno-error=strict-prototypes -fvisibility=hidden)
+target_compile_definitions(o1c PRIVATE _DEFAULT_SOURCE=1 _FORTIFY_SOURCE=2)
 
 find_package(JNI REQUIRED)
 target_include_directories(o1c PUBLIC ${JNI_INCLUDE_DIRS})
@@ -66,4 +67,9 @@ endif ()
 check_symbol_exists(memset_s string.h HAVE_MEMSET_S)
 if (${HAVE_MEMSET_S})
     add_compile_definitions(o1c PUBLIC HAVE_MEMSET_S)
+endif ()
+
+check_symbol_exists(getentropy unistd.h HAVE_GETENTROPY)
+if (${HAVE_GETENTROPY})
+    add_compile_definitions(o1c PRIVATE HAVE_GETENTROPY)
 endif ()
