Refactor C API into more specific names
This also separates the main API into separate headers while combining them into a single API header.

--- a/c/src/CMakeLists.txt
+++ b/c/src/CMakeLists.txt
@@ -3,7 +3,7 @@ include(CheckSymbolExists)
 include(GenerateExportHeader)
 include(FetchContent)
 
-set(O1C_SOURCE_FILES crypto.c auth.c aead.c sha512.c drbg.c util.c curve25519.c hash.c jni.c)
+set(O1C_SOURCE_FILES util.c hash.c chacha20.c poly1305.c xchacha20poly1305.c sha512.c drbg.c curve25519.c jni.c)
 
 FetchContent_Declare(blake3
         GIT_REPOSITORY https://github.com/BLAKE3-team/BLAKE3.git
