--- a/c/test/CMakeLists.txt
+++ b/c/test/CMakeLists.txt
@@ -28,3 +28,9 @@ add_test(NAME Ed25519 COMMAND test_ed25519)
 
 add_executable(test_ristretto255 test_ristretto255.c)
 add_test(NAME Ristretto255 COMMAND test_ristretto255)
+
+add_executable(test_scalar25519 test_scalar25519.c)
+add_test(NAME Scalar25519 COMMAND test_scalar25519)
+
+#add_executable(test_signcrypt test_signcrypt.c)
+#add_test(NAME SignCrypt COMMAND test_signcrypt)
