--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,9 @@ project(O1C
         VERSION 1.0
         LANGUAGES C)
 
-include(FetchContent)
-
 set(CMAKE_C_STANDARD 11)
 add_compile_options(-O3 -Wall -Wextra)
 
-add_subdirectory(src)
+add_subdirectory(src/main/c)
 enable_testing()
-add_subdirectory(test)
+add_subdirectory(src/test/c)
